# cv-c

./: CMakeLists.txt  LICENSE  README.md
inc/: image.h  kmeans.h  sift.h  spm.h  svm.h  utils.h
src/: image.c  kmeans.c  sift.c  spm.c  svm.c  utils.c
